@@ -1,3 +1,9 @@
+Fri Jun 20 09:08:05 2003  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/pch_cmd.pl:
+
+          Fixed the usage to display the correct options.
+
 Fri Jun 20 08:54:29 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/modules/ProjectCreator.pm:
